# allocator

./: .travis.yml  CMakeLists.txt
include/: allocator.h  factorial.h  list.h
source/: gtest.cpp  main.cpp
